# xauto

./: .dockerignore  .env.example  .gitignore  CLOUD.md  Dockerfile  cli.js  cloud-entry.mjs  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  承認画面を開く.command
config/: categories.json  competitors.json  hooks.json  profile.json  schedule.json
public/: dashboard.html
src/: analytics.js  balancer.js  daily-workflow.js  db.js  generator.js  hooks.js  insights.js  ng-check.js  paths.js  posts-store.js  profile.js  prompt.js  reporter.js  review-actions.js  review-session.js  scheduled-worker.js  scheduler.js  time-jst.js  web-server.js  x-client.js
xauto/: __init__.py  cli.py  client.py  config.py
